update to listmaker
added list functionality to affect frontend

--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -224,6 +224,7 @@ html {
     border-bottom: 1px solid #909090;
     margin-bottom: 5vw;
     padding-top: 2vh;
+    height: 6vh;
 }
 
 .listTitle p {
