--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -101,18 +101,6 @@ html {
     color: var(--blue);
 }
 
-/* content slider functionality */
-.content {
-    overflow: hidden;
-}
-
-.frontpage, list {
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    -webkit-overflow-scrolling: touch;
-}
-
 
 /* front page styling */
 .frontpage img {
@@ -157,6 +145,7 @@ html {
     grid-template-rows: 10vh auto 6vh;
     border-radius: 2vh;
 }
+
 
 .list ul {
     grid-row: 2/3;
@@ -221,10 +210,11 @@ html {
 .listTitle {
     grid-row: 1/2;
     grid-column: 2/3;
-    border-bottom: 1px solid #909090;
-    margin-bottom: 5vw;
     padding-top: 2vh;
+    border-bottom: 1px solid #7e7e7e;
     height: 6vh; 
+    display: flex;
+    justify-content: space-between;
 }
 
 .listTitle p {
@@ -233,6 +223,12 @@ html {
     line-height: 5vh;
 }
 
+.deleteList {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 4vh;
+}
 
 .add-item {
     grid-row: 3/4;
@@ -257,6 +253,20 @@ html {
     outline: none;
 }
 
-.add-item input::placeholder {
+.add-item input:placeholder {
     font-size: 2vh;
+}
+
+
+/* Carousel styling and functionality */
+.content {
+    overflow-x: auto;
+    display: flex;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+}
+
+.frontpage, .list {
+    scroll-snap-align: center;
+    flex-shrink: 0;
 }
