--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -1,3 +1,5 @@
+/* generic reset of styling */
+
 body, body * {
     margin: unset;
     box-sizing: unset;
@@ -14,7 +16,7 @@ body {
     width: 100%;
 }
 
-/* css variables*/
+/* css variables and standard font styling*/
 
 :root {
     --blue: #2525e5;
@@ -32,24 +34,24 @@ html {
     scroll-behavior: smooth;
 }
 
+/* page grid system */
+
 .pageContainer {
     width: 100vw;
     display: grid;
     grid-template-areas: "header" "content";
-    grid-template-rows: 15vh auto;
+    grid-template-rows: 16.5vh auto;
     min-height: 100vh;
     background-color: var(--backgroundclr);
     color: var(--fontclr);
 }
 
-.neomorph {
-    border-radius: 2vh;
-    box-shadow: 0.25em 0.25em 0.5em rgba(0, 0, 0, 0.1), -0.25em -0.25em 0.5em rgba(255, 255, 255, 1);
-}
+/* header styling */
 
 .header {
+    position: relative;
     grid-area: header;
-    height: 15vh;
+    height: 16.5vh;
 }
 
 .header p {
@@ -57,28 +59,65 @@ html {
     font-weight: 700;
 }
 
+/* add a list plus button styling */
+
+.addlist-plus {
+    background-color: var(--quickMClr);
+    position: absolute;
+    right: 0vw;
+    bottom: 0vw;
+    height: 7.5vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 15vw;
+}
+
+.header .fa-plus {
+    color: var(--blue);
+}
+
+/* top part of header and logo styling*/
+
 .logo {
     color: var(--blue);
-    height: 7.5vh;
+    height: 9vh;
     display: flex;
     justify-content: center;
     background-color: black;
 }
 
 .logo p {
-    line-height: 7.5vh;
+    line-height: 9vh;
+    font-size: 6vh;
 }
 
-.delete {
+/* info button styling */
+
+.info-button {
+    position: absolute;
+    left: 5.5vw;
+    top: 4.5vh;
+    margin-top: -2vh;
+}
+
+/* info specific styling */
+
+/* WIP */
+
+/* deleta all data button styling */
+
+.clear {
     position: absolute;
     right: 10vw;
-    top: 3.75vh;
-    margin-top: -1.875vh;
+    top: 4.5vh;
+    margin-top: -2vh;
     right: 4vw;
     color: rgb(201, 99, 99);
 }
 
 /* placement of content */
+
 .content {
     grid-area: content;
 }
@@ -87,22 +126,38 @@ html {
 
 .quickmenu {
     height: 7.5vh;
+    width: 80vw;
     background-color: var(--quickMClr);
     display: flex;
-    justify-content: center;
+    overflow-x: auto;
+    overflow-y: hidden;
+    border-left: 5vw solid var(--quickMClr);
+    border-right: 5vw solid var(--quickMClr);
 }
 
-.quickmenu a:not(:last-child) {
-    padding-right: 5vw;
+.quickmenu a {
+    padding: 0 2.8vw;
+}
+
+.quickmenu a:first-child {
+    padding-left: 0vw;
+}
+
+.quickmenu a:last-child {
+    padding-right: 0vw;
 }
 
 .quickmenu i {
     line-height: 7.5vh;
+    color: var(--fontcheckedclr);
+}
+
+.active i {
     color: var(--blue);
 }
 
-
 /* front page styling */
+
 .frontpage img {
     width: 100%;
     border-radius: 2vh;
@@ -118,12 +173,13 @@ html {
     border-radius: 2vh;
     background-color: var(--quickMClr);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .create-list-box button {
-    width: 45vw;
+    width: 50vw;
     height: 8vh;
     color: white;
     font-weight: 700;
@@ -131,6 +187,55 @@ html {
     border-radius: 1vh;
     background-color: var(--blue);
     box-shadow: 0vh 1vh var(--backgroundclr);
+}
+
+/* add list pop-up styling */
+
+.newlist-popup {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    transition: 0.4s;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+}
+
+.closed {
+    display: none;
+}
+
+.add-list {
+    position: relative;
+    width: 90vw;
+    height: 15vh;
+    background-color: var(--quickMClr);
+    margin-left: 5vw;
+    margin-top: 25vh;
+    border-radius: 5vw;
+}
+
+.add-list .fa-window-close {
+    position: absolute;
+    top: 5vw;
+    right: 5vw;
+}
+
+.add-list input {
+    position: absolute;
+    border: none;
+    background-color: var(--quickMClr);
+    color: var(--fontclr);
+    height: 4vh;
+    padding-left: 2vw;
+    width: 65vw;
+    right: 5vw;
+    top: 8vh;
+}
+
+.add-list .fa-plus-circle {
+    position: absolute;
+    left: 5vw;
+    top: 8vh;
 }
 
 /* list styling */
@@ -146,16 +251,18 @@ html {
     border-radius: 2vh;
 }
 
-
 .list ul {
     grid-row: 2/3;
     grid-column: 2/3;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .list ul li {
     list-style: none;
 }
+
+/* list items styling */
 
 .listItem {
     display: grid;
@@ -164,6 +271,7 @@ html {
     margin-bottom: 1vh;
 }
 
+/* checkmark styling */
 .checkmark {
     display: flex;
     justify-content: center;
@@ -178,11 +286,13 @@ html {
     color: var(--fontcheckedclr);
 }
 
+/* list item title styling*/
 .title p {
     line-height: 4vh;
     font-size: 3vh;
 }
 
+/* delete list item button styling */
 .deleteItem {
     display: flex;
     justify-content: center;
@@ -193,26 +303,18 @@ html {
     grid-row: 1/2;
 }
 
-.description {
-    grid-row: 2/3;
-    grid-column: 2/3;
-}
-
-.deadline {
-    grid-row: 3/4;
-    grid-column: 2/4;
-}
-
+/* list item text padding */
 .list li p {
     padding-left: 3vw;
 }
 
+/* list title styling */
 .listTitle {
     grid-row: 1/2;
     grid-column: 2/3;
     padding-top: 2vh;
     border-bottom: 1px solid #7e7e7e;
-    height: 6vh; 
+    height: 6vh;
     display: flex;
     justify-content: space-between;
 }
@@ -223,6 +325,7 @@ html {
     line-height: 5vh;
 }
 
+/* delete list button styling */
 .deleteList {
     display: flex;
     justify-content: center;
@@ -230,6 +333,7 @@ html {
     width: 4vh;
 }
 
+/* add list item button styling */
 .add-item {
     grid-row: 3/4;
     grid-column: 2/3;
@@ -238,6 +342,7 @@ html {
     padding-bottom: 2vh;
 }
 
+/* add list item input styling */
 .add-item input {
     border: none;
     background-color: var(--quickMClr);
@@ -248,17 +353,17 @@ html {
     width: 65vw;
 }
 
-.add-item input:focus {
+.add-item input:focus, .add-list input {
     background-color: #2f2f2f;
     outline: none;
 }
 
-.add-item input:placeholder {
+.add-item input::placeholder, .add-list input::placeholder {
     font-size: 2vh;
 }
 
-
 /* Carousel styling and functionality */
+
 .content {
     overflow-x: auto;
     display: flex;
@@ -270,3 +375,9 @@ html {
     scroll-snap-align: center;
     flex-shrink: 0;
 }
+
+.line {
+    text-decoration: line-through;
+}
+
+/* Desktop specific styling */
