--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -14,6 +14,7 @@ body, body * {
 
 body {
     width: 100%;
+    overflow: hidden;
 }
 
 /* css variables and standard font styling*/
@@ -24,6 +25,8 @@ body {
     --quickMClr: #202020;
     --fontclr: #7e7e7e;
     --fontcheckedclr: #585858;
+    --red: rgb(201, 99, 99);
+    --desktopListWidth: 400px;
     font-size: 2vh;
     font-family: 'Titillium Web', sans-serif;
 }
@@ -44,6 +47,7 @@ html {
     min-height: 100vh;
     background-color: var(--backgroundclr);
     color: var(--fontclr);
+    overflow: hidden;
 }
 
 /* header styling */
@@ -67,10 +71,10 @@ html {
     right: 0vw;
     bottom: 0vw;
     height: 7.5vh;
+    width: 15vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 15vw;
 }
 
 .header .fa-plus {
@@ -96,7 +100,7 @@ html {
 
 .info-button {
     position: absolute;
-    left: 5.5vw;
+    left: 5vw;
     top: 4.5vh;
     margin-top: -2vh;
 }
@@ -105,15 +109,75 @@ html {
 
 /* WIP */
 
+.info {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.info article {
+    width: 90vw;
+    background-color: var(--quickMClr);
+    margin-left: 5vw;
+    top: 16.5vh;
+    margin-top: 5vw;
+    border-radius: 2vh;
+    position: relative;
+}
+
+.info h1 {
+    font-size: 6vh;
+    margin-left: 5vw;
+}
+
+.info-content {
+    display: grid;
+    grid-template-columns: 5vw auto 5vw;
+    max-height: 65vh;
+    overflow-y: scroll;
+}
+
+.info-content figure {
+    grid-column: 2;
+}
+
+.info-content figure img {
+    width: 100%;
+}
+
+.info i {
+    position: absolute;
+    right: 5vw;
+    top: 5vw;
+}
+
+.info h2 {
+    grid-column: 2;
+    font-size: 3vh;
+}
+
+.info p {
+    grid-column: 2;
+    font-size: 2vh;
+    margin-bottom: 5vh;
+}
+
+.info span::before {
+    width: 100%;
+    height: 5vw;
+}
+
 /* deleta all data button styling */
 
 .clear {
     position: absolute;
-    right: 10vw;
+    right: 5vw;
     top: 4.5vh;
     margin-top: -2vh;
     right: 4vw;
-    color: rgb(201, 99, 99);
+    color: var(--red);
 }
 
 /* placement of content */
@@ -133,6 +197,10 @@ html {
     overflow-y: hidden;
     border-left: 5vw solid var(--quickMClr);
     border-right: 5vw solid var(--quickMClr);
+}
+
+.quickmenu::-webkit-scrollbar {
+    height: 0;
 }
 
 .quickmenu a {
@@ -158,8 +226,12 @@ html {
 
 /* front page styling */
 
-.frontpage img {
-    width: 100%;
+.frontimg {
+    margin: 0;
+    padding: 0;
+}
+
+.frontimg img {
     border-radius: 2vh;
     margin: 5vw;
     width: 90vw;
@@ -195,7 +267,7 @@ html {
     width: 100vw;
     height: 100vh;
     position: fixed;
-    transition: 0.4s;
+    transition: 0.4s ease-in-out;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
 }
@@ -251,6 +323,7 @@ html {
     border-radius: 2vh;
 }
 
+
 .list ul {
     grid-row: 2/3;
     grid-column: 2/3;
@@ -272,6 +345,7 @@ html {
 }
 
 /* checkmark styling */
+
 .checkmark {
     display: flex;
     justify-content: center;
@@ -287,12 +361,14 @@ html {
 }
 
 /* list item title styling*/
+
 .title p {
     line-height: 4vh;
     font-size: 3vh;
 }
 
 /* delete list item button styling */
+
 .deleteItem {
     display: flex;
     justify-content: center;
@@ -304,11 +380,13 @@ html {
 }
 
 /* list item text padding */
+
 .list li p {
     padding-left: 3vw;
 }
 
 /* list title styling */
+
 .listTitle {
     grid-row: 1/2;
     grid-column: 2/3;
@@ -319,13 +397,14 @@ html {
     justify-content: space-between;
 }
 
-.listTitle p {
+.listTitle h1 {
     padding-left: 2vw;
     font-size: 4vh;
     line-height: 5vh;
 }
 
 /* delete list button styling */
+
 .deleteList {
     display: flex;
     justify-content: center;
@@ -334,6 +413,7 @@ html {
 }
 
 /* add list item button styling */
+
 .add-item {
     grid-row: 3/4;
     grid-column: 2/3;
@@ -343,6 +423,7 @@ html {
 }
 
 /* add list item input styling */
+
 .add-item input {
     border: none;
     background-color: var(--quickMClr);
@@ -380,4 +461,192 @@ html {
     text-decoration: line-through;
 }
 
+/* Clear data popup styling */
+.clear-popup {
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.delete-data {
+    width: 80vw;
+    background-color: var(--quickMClr);
+    margin-left: 10vw;
+    top: 16.5vh;
+    margin-top: 10vw;
+    border-radius: 2vh;
+    position: relative;
+    display: grid;
+    grid-template-columns: 5vw 1fr 1fr 5vw;
+}
+
+.delete-data h2 {
+    margin-top: 3vw;
+    grid-column: 2/4;
+}
+
+.delete-data i {
+    position: absolute;
+    right: 5vw;
+    top: 5vw;
+}
+
+.delete-data button {
+    margin: 3vh 5vw;
+    width: 25vw;
+    height: 3vh;
+    border: none;
+    border-radius: 2vw;
+    color: white;
+    box-shadow: 0 1vw black;
+}
+
+.delete-data .yesButton {
+    grid-column: 2;
+    background-color: var(--blue);
+}
+
+.delete-data .noButton {
+    grid-column: 3;
+    background-color: var(--blue);
+}
+
+
 /* Desktop specific styling */
+
+@media screen and (min-width: 600px) {
+    /* header specific */
+    .pageContainer {
+        grid-template-rows: 9vh auto;
+    }
+    .header {
+        height: 9vh;
+    }
+    .info-button {
+        left: 40px;
+    }
+    .clear {
+        right: 40px;
+    }
+    /* quickmenu */
+    .quickmenu {
+        display: none;
+        border-left: 2vw;
+    }
+    .addlist-plus {
+        background-color: rgba(0, 0, 0, 0);
+        top: 0;
+        margin: 0;
+        height: 9vh;
+        width: unset;
+        right: 110px;
+    }
+    /* content specific */
+    .content {
+        overflow-x: auto;
+        overflow-y: scroll;
+        flex-wrap: wrap;
+        height: 91vh;
+    }
+    /* frontpage part*/
+    .frontpage {
+        position: relative;
+        width: var(--desktopListWidth);
+        margin: 40px 0vw 0 40px;
+    }
+    .frontimg img {
+        width: var(--desktopListWidth);
+        height: 35vh;
+        margin: 0;
+        border-radius: 20px;
+    }
+    .create-list-box {
+        position: absolute;
+        width: var(--desktopListWidth);
+        margin: 0;
+        top: 40vh;
+        border-radius: 20px;
+    }
+    .create-list-box button {
+        width: 60%;
+    }
+    /* list specific */
+    .list {
+        width: var(--desktopListWidth);
+        margin: 40px 0vw 0vh 40px;
+        border-radius: 20px;
+    }
+    .listTitle h1 {
+        padding-left: 10px;
+        font-size: 35px;
+    }
+
+    .list ul li p {
+        padding-left: 10px;
+        font-size: 25px;
+    }
+
+    .add-item input {
+        padding-left: 10px;
+        margin-left: 10px;
+    }
+    /* add list styling */
+    .add-list {
+        position: relative;
+        width: var(--desktopListWidth);
+        height: 140px;
+        background-color: var(--quickMClr);
+        margin-left: 0;
+        margin-top: 0;
+        border-radius: 20px;
+        border: 4px solid var(--fontcheckedclr);
+        box-shadow: 0px 5px black;
+        top: 9vh;
+        margin-top: 40px;
+    }
+    .add-list input {
+        width: 280px;
+        right: 20px;
+        padding-left: 10px;
+        margin-left: 10px;
+    }
+    .add-list .fa-window-close {
+        top: 20px;
+        right: 20px;
+    }
+    .add-list .fa-plus-circle {
+        left: 20px;
+    }
+    .newlist-popup {
+        position: absolute;
+        height: unset;
+        width: unset;
+        right: 100px;
+        background-color: rgba(0, 0, 0, 0);
+    }
+
+    /* info specific styling */
+    .info {
+        z-index: 2;
+    }
+
+    .info article {
+        width: var(--desktopListWidth);
+        margin-left: 40px;
+        top: 9vh;
+        margin-top: 40px;
+        border-radius: 20px;
+    }
+
+    .info-content {
+        grid-template-columns: 20px auto 20px;
+    }
+    .info i {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+    }
+        
+}
