--- a/css/baseStyle.css
+++ b/css/baseStyle.css
@@ -91,9 +91,11 @@ html {
     background-color: black;
 }
 
-.logo p {
+.logo a, .logo a:visited {
     line-height: 9vh;
     font-size: 6vh;
+    color: var(--blue);
+    font-weight: 700;
 }
 
 /* info button styling */
@@ -114,7 +116,8 @@ html {
     width: 100vw;
     height: 100vh;
     top: 0;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.25);
+    z-index: 2;
 }
 
 .info article {
@@ -132,6 +135,15 @@ html {
     margin-left: 5vw;
 }
 
+.info h2 {
+    grid-column: 2;
+    font-size: 3vh;
+}
+
+.info h3 {
+    font-size: 2.5vh;
+}
+
 .info-content {
     display: grid;
     grid-template-columns: 5vw auto 5vw;
@@ -139,23 +151,30 @@ html {
     overflow-y: scroll;
 }
 
+.info-content * {
+    grid-column: 2;
+}
+
 .info-content figure {
     grid-column: 2;
 }
 
-.info-content figure img {
-    width: 100%;
+.info-content figure img {}
+
+.info-content ol {
+    padding-left: 5vw;
+    margin-bottom: 5vh;
+}
+
+.info-content ol li p {
+    margin-bottom: 0;
+    font-weight: 500;
 }
 
 .info i {
     position: absolute;
     right: 5vw;
     top: 5vw;
-}
-
-.info h2 {
-    grid-column: 2;
-    font-size: 3vh;
 }
 
 .info p {
@@ -167,6 +186,51 @@ html {
 .info span::before {
     width: 100%;
     height: 5vw;
+}
+
+/* info carousel */
+
+.addList-carousel {
+    overflow: hidden;
+    text-align: center;
+}
+
+.addList-carousel a:visited {
+    color: var(--blue)
+}
+
+.infoimglink {
+    width: 5vw;
+    height: 5vw;
+    background-color: black;
+    border-radius: 50%;
+    line-height: 5vw;
+    font-weight: 700;
+    font-size: 0.75rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.images::-webkit-scrollbar {
+    height: 0;
+}
+
+.images {
+    overflow-x: auto;
+    display: flex;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    width: 75vw;
+}
+
+.infoimg {
+    scroll-snap-align: center;
+    flex-shrink: 0;
+}
+
+.infoimg img {
+    width: 75vw;
 }
 
 /* deleta all data button styling */
@@ -184,6 +248,7 @@ html {
 
 .content {
     grid-area: content;
+    overflow-y: overlay;
 }
 
 /* quickmenu styling */
@@ -229,13 +294,22 @@ html {
 .frontimg {
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 .frontimg img {
     border-radius: 2vh;
     margin: 5vw;
     width: 90vw;
-    height: 32vh;
+}
+.frontimg p {
+    font-size: 4vh;
+    color: #f1f1f1;
+    width: 60vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .create-list-box {
@@ -270,6 +344,7 @@ html {
     transition: 0.4s ease-in-out;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
+    z-index: 2;
 }
 
 .closed {
@@ -323,16 +398,27 @@ html {
     border-radius: 2vh;
 }
 
-
 .list ul {
     grid-row: 2/3;
-    grid-column: 2/3;
+    grid-column: 2/4;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: overlay;
 }
 
 .list ul li {
     list-style: none;
+}
+
+::-webkit-scrollbar {
+    background-color: unset;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--fontcheckedclr);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--fontclr);
 }
 
 /* list items styling */
@@ -377,6 +463,7 @@ html {
     width: 4vh;
     grid-column: 3/4;
     grid-row: 1/2;
+    margin-right: 20px;
 }
 
 /* list item text padding */
@@ -462,12 +549,14 @@ html {
 }
 
 /* Clear data popup styling */
+
 .clear-popup {
     position: absolute;
     width: 100vw;
     height: 100vh;
     top: 0;
     background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
 }
 
 .delete-data {
@@ -513,7 +602,6 @@ html {
     background-color: var(--blue);
 }
 
-
 /* Desktop specific styling */
 
 @media screen and (min-width: 600px) {
@@ -558,15 +646,18 @@ html {
     }
     .frontimg img {
         width: var(--desktopListWidth);
-        height: 35vh;
         margin: 0;
         border-radius: 20px;
+    }
+    .frontimg p {
+        font-size: 40px;
+        width: 70%;
     }
     .create-list-box {
         position: absolute;
         width: var(--desktopListWidth);
         margin: 0;
-        top: 40vh;
+        top: 30vh;
         border-radius: 20px;
     }
     .create-list-box button {
@@ -582,12 +673,10 @@ html {
         padding-left: 10px;
         font-size: 35px;
     }
-
     .list ul li p {
         padding-left: 10px;
         font-size: 25px;
     }
-
     .add-item input {
         padding-left: 10px;
         margin-left: 10px;
@@ -626,12 +715,11 @@ html {
         right: 100px;
         background-color: rgba(0, 0, 0, 0);
     }
-
     /* info specific styling */
     .info {
         z-index: 2;
+        background-color: rgba(0, 0, 0, 0.75);
     }
-
     .info article {
         width: var(--desktopListWidth);
         margin-left: 40px;
@@ -639,17 +727,37 @@ html {
         margin-top: 40px;
         border-radius: 20px;
     }
-
+    .info h1 {
+        font-size: 6vh;
+        margin-left: 20px;
+    }
     .info-content {
         grid-template-columns: 20px auto 20px;
+    }
+    .info-content ol {
+        padding-left: 20px;
     }
     .info i {
         position: absolute;
         right: 20px;
         top: 20px;
     }
-        
-
+    /* info carousel */
+    .infoimglink {
+        width: 20px;
+        height: 20px;
+        line-height: 20px;
+    }
+    .images {
+        width: 340px;
+    }
+    .infoimg {
+        scroll-snap-align: center;
+        flex-shrink: 0;
+    }
+    .infoimg img {
+        width: 340px;
+    }
     /* clear data popup styling */
     .clear-popup {
         background-color: rgba(0, 0, 0, 0);
@@ -660,7 +768,7 @@ html {
         right: 100px;
         z-index: 2;
     }
-    .delete-data{
+    .delete-data {
         width: var(--desktopListWidth);
         margin-left: 0;
         top: 0;
@@ -672,21 +780,17 @@ html {
         grid-template-columns: 20px auto auto 20px;
         box-shadow: 0px 5px black;
     }
-
     .delete-data h2 {
         margin-top: 20px;
         grid-column: 2/4;
     }
-    
     .delete-data button {
         margin: 20px 20px;
         width: unset;
-        height: unset;
+        height: 30px;
         border: none;
         border-radius: 10px;
         color: white;
         box-shadow: 0 5px black;
     }
-    
-    
 }
